--- a/src/main/resources/ui.fxml
+++ b/src/main/resources/ui.fxml
@@ -1,14 +1,25 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.RowConstraints?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="BoardGameController"
-            prefHeight="400.0" prefWidth="600.0">
-
-</AnchorPane>
+<GridPane fx:id="board" gridLinesVisible="true" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="514.0" prefWidth="600.0" stylesheets="@ui.css" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="boardgame.BoardGameController">
+  <columnConstraints>
+    <ColumnConstraints hgrow="SOMETIMES" minWidth="1.0" prefWidth="100.0" />
+    <ColumnConstraints hgrow="SOMETIMES" minWidth="1.0" prefWidth="100.0" />
+      <ColumnConstraints hgrow="SOMETIMES" minWidth="1.0" prefWidth="100.0" />
+      <ColumnConstraints hgrow="SOMETIMES" minWidth="1.0" prefWidth="100.0" />
+      <ColumnConstraints hgrow="SOMETIMES" minWidth="1.0" prefWidth="100.0" />
+      <ColumnConstraints hgrow="SOMETIMES" minWidth="1.0" prefWidth="100.0" />
+      <ColumnConstraints hgrow="SOMETIMES" minWidth="1.0" prefWidth="100.0" />
+  </columnConstraints>
+  <rowConstraints>
+    <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+    <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+    <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+  </rowConstraints>
+</GridPane>
